// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomRoute Error 1`] = `
<div>
  Error
</div>
`;

exports[`CustomRoute Is connected, private route : should show div 1`] = `
<div>
  Should be shown
</div>
`;

exports[`CustomRoute Is connected, public route : should redirect to Home/Login 1`] = `
<div>
  Home/Login
</div>
`;

exports[`CustomRoute Is connected, public/private route : should show private 1`] = `
<div>
  Private component
</div>
`;

exports[`CustomRoute Is not connected, private route : should redirect to Home/Login 1`] = `
<div>
  Home/Login
</div>
`;

exports[`CustomRoute Is not connected, public route : should show div 1`] = `
<div>
  Should be shown
</div>
`;

exports[`CustomRoute Is not connected, public/private route : should show public 1`] = `
<div>
  Public component
</div>
`;

exports[`CustomRoute Loading 1`] = `
<div
  className="MuiGrid-root makeStyles-center-1 MuiGrid-container"
>
  <div
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;
